# Snowlake

./: .clang-format  .gitignore  .travis.yml  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  _config.yml  run_clang_format.sh
.github/workflows/: main.yml
demo/: MyAwesomeLangTypeRules.sl  README.md
demo/output/: InferenceErrorDefn.cpp  InferenceErrorDefn.h  MyAwesomeLangTypeRules.cpp  MyAwesomeLangTypeRules.h
docs/: Makefile
docs/source/: conf.py  index.rst  tutorial.rst
libs/: Makefile
resources/: SnowlakeIcon.pxm
src/: ASTUtils.cpp  ASTUtils.h  ASTVisitor.cpp  ASTVisitor.h  ArgumentParser.cpp  ArgumentParser.h  CMakeLists.txt  CmdlDriver.cpp  CmdlDriver.h  CompilerError.cpp  CompilerError.h  CompilerErrorCategory.h  CompilerErrorHandlerRegistrar.cpp  CompilerErrorHandlerRegistrar.h  CompilerErrorPrinter.h  Error.h  ErrorPrinter.h  ProgramDriver.cpp  ProgramDriver.h  SemanticAnalysisErrorCategory.cpp  SemanticAnalysisErrorCategory.h  SemanticAnalysisErrorCodes.h  SemanticAnalyzer.cpp  SemanticAnalyzer.h  SynthesisErrorCategory.h  SynthesisErrorCodes.h  Synthesizer.cpp  Synthesizer.h  SynthesizerUtil.h  ast.h  ast_fwd.h  ast_util.cpp  ast_util.h  format_defn.h  macros.h  main.cpp  optional.h  variant.h  variant_dispatcher.h  variant_impl.h  (+2 more)
src/grammar/: CMakeLists.txt  lexer.ll  parser.yy
src/parser/: CMakeLists.txt  ParserDriver.cpp  ParserDriver.h  ParserErrorCategory.cpp  ParserErrorCategory.h  ParserErrorCodes.h  lexer.ll  parser.yy
src/parser/precompiled/: lex.yy.cc  lex.yy.hh  location.hh  parser.tab.cc  parser.tab.hh  position.hh  stack.hh
tests/: CMakeLists.txt  run_tests.py  test_all_features.json  test_computed_target_type.json  test_duplicate_groups.json  test_empty_group.json  test_incompatible_array_type_target.json  test_incompatible_targets_in_range_clause.json  test_invalid_keyword.json  test_invalid_nested_premise.json  test_invalid_proposition.json  test_invalid_range_clause.json  test_repeated_target_in_premise.json  test_repeating_symbol.json  test_valid_proposition.json  test_valid_semantics.json  tests.py
tests/fixtures/: computed_target_type.sl  duplicate_groups.sl  empty_group.sl  full_feature.sl  incompatible_array_type_target.sl  incompatible_targets_in_range_clause.sl  invalid_keyword.sl  invalid_nested_premise.sl  invalid_proposition.sl  invalid_range_clause.sl  repeated_target_in_premise.sl  repeating_symbol.sl  valid_proposition.sl  valid_semantics.sl
tests/snapshots/: ComputedTargetType.cpp  ComputedTargetType.h  EmptyGroup.cpp  EmptyGroup.h  FullFeature.cpp  FullFeature.h  InferenceErrorDefn.cpp  InferenceErrorDefn.h  ValidProposition.cpp  ValidProposition.h  ValidSemantics.cpp  ValidSemantics.h
unittests/: ArgumentParserTests.cpp  CMakeLists.txt  CmdlDriverTests.cpp  OptionalTests.cpp  ParserTests.cpp  ProgramDriverTests.cpp  SemanticAnalyzerTests.cpp  SynthesizerTests.cpp  VariantTests.cpp  main.cpp
